@@ -13,6 +13,7 @@ Added option to bounce marker pin on listing hover on listing page - ADDED
 Multinews theme compatibility changes for new version - FIXED
 Add listing neighbourhood via GD import/export listings - CHANGED
 If apostrophe in option value then it disappears from the selected option values - FIXED
+Display cpt/category name in the advanced pagination info - CHANGED
 
 v1.5.8
 Local .mo file path points to wrong location - FIXED
